#331: improve coverage