@@ -72,17 +72,15 @@ public class ProtoConverter {
     }
 
     public MSG_Notification createNotificationFor(@NonNull Fact t) {
-        MSG_Notification.Builder builder = MSG_Notification.newBuilder()
-                .setType(
-                        MSG_Notification.Type.Fact);
+        MSG_Notification.Builder builder = MSG_Notification.newBuilder().setType(
+                MSG_Notification.Type.Fact);
         builder.setFact(toProto(t));
         return builder.build();
     }
 
     public MSG_Notification createNotificationFor(@NonNull UUID id) {
-        MSG_Notification.Builder builder = MSG_Notification.newBuilder()
-                .setType(
-                        MSG_Notification.Type.Id);
+        MSG_Notification.Builder builder = MSG_Notification.newBuilder().setType(
+                MSG_Notification.Type.Id);
         builder.setId(toProto(id));
         return builder.build();
     }
@@ -226,10 +224,8 @@ public class ProtoConverter {
     }
 
     public StateForRequest fromProto(MSG_StateForRequest request) {
-        List<UUID> aggIds = request.getAggIdsList()
-                .stream()
-                .map(this::fromProto)
-                .collect(Collectors.toList());
+        List<UUID> aggIds = request.getAggIdsList().stream().map(this::fromProto).collect(Collectors
+                .toList());
         String ns = request.getNsPresent() ? request.getNs() : null;
         return new StateForRequest(aggIds, ns);
     }
@@ -252,13 +248,10 @@ public class ProtoConverter {
 
     public MSG_StateForRequest toProto(@NonNull StateForRequest req) {
         String ns = req.ns();
-        MSG_StateForRequest.Builder b = MSG_StateForRequest
-                .newBuilder()
+        MSG_StateForRequest.Builder b = MSG_StateForRequest.newBuilder()
                 .setNsPresent(ns != null)
-                .addAllAggIds(req.aggIds()
-                        .stream()
-                        .map(this::toProto)
-                        .collect(Collectors.toList()));
+                .addAllAggIds(req.aggIds().stream().map(this::toProto).collect(Collectors
+                        .toList()));
 
         if (ns != null)
             b.setNs(ns);
@@ -267,8 +260,7 @@ public class ProtoConverter {
     }
 
     public MSG_ConditionalPublishRequest toProto(@NonNull ConditionalPublishRequest req) {
-        MSG_ConditionalPublishRequest.Builder b = MSG_ConditionalPublishRequest
-                .newBuilder();
+        MSG_ConditionalPublishRequest.Builder b = MSG_ConditionalPublishRequest.newBuilder();
         b.setFacts(toProto(req.facts()));
         Optional<StateToken> token = req.token();
         boolean present = token.isPresent();
